--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
@@ -1,1 +1,29 @@
-<p>listado-porcino works!</p>
+<br>
+<div class="container">
+    <table class="table">
+        <thead>
+            <tr>
+
+                <th scope="col">Raza</th>
+                <th scope="col">Edad</th>
+                <th scope="col">Peso [kg]</th>
+                <th scope="col">Accion</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            @for (porcino of porcinos; track $index) {
+                <tr>
+                    <td>{{ porcino.raza }}</td>
+                    <td>{{ porcino.edad }}</td>
+                    <td>{{ porcino.peso }}</td>
+                    <td>
+                        <i class="bi bi-pencil btn lila margin2"></i>
+                        <i class="bi bi-trash3 btn rojoDanger margin2"></i>
+                    </td>
+                </tr>
+            }
+        
+        </tbody>
+    </table>
+</div>
