--- a/LaGranjaSAFront/LaGranjaFront/src/styles.css
+++ b/LaGranjaSAFront/LaGranjaFront/src/styles.css
@@ -1,3 +1,14 @@
 body {
-    background-color: rgb(23, 49, 62) !important;
+    background-color: rgb(241, 240, 228) !important;
+}
+
+.rojoDanger {
+    color: rgb(220, 20, 60) !important;
+}
+
+.lila{
+    color: #5D688A !important;
+}
+.margin2{
+    margin: 0.2rem;
 }
