--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-clientes/listado-clientes.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-clientes/listado-clientes.html
@@ -1,9 +1,6 @@
 <br>
-
-
-<br>
 <div class="container">
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
 
@@ -16,18 +13,43 @@
         </thead>
         <tbody>
             @for (item of clientes; track $index) {
-                <tr>
-                    <td>{{ item.cedula }}</td>
-                    <td>{{ item.nombres }} {{ item.apellidos }}</td>
-                    <td>{{ item.direccion }}</td>
-                    <td>{{ item.telefono }}</td>
-                    <td>
-                        <i class="bi bi-pencil btn lila margin2"></i>
-                        <i class="bi bi-trash3 btn rojoDanger margin2"></i>
-                    </td>
-                </tr>
+            <tr>
+                <td>{{ item.cedula }}</td>
+                <td>{{ item.nombres }} {{ item.apellidos }}</td>
+                <td>{{ item.direccion }}</td>
+                <td>{{ item.telefono }}</td>
+                <td>
+                    <i class="bi bi-pencil btn lila margin2"></i>
+                    <i class="bi bi-trash3 btn rojoDanger margin2"></i>
+                </td>
+            </tr>
             }
-        
+
         </tbody>
     </table>
+
+    <button type="button" class="btn botonPrimario" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+        Agregarcliente nuevo
+    </button>
+</div>
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content ">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Cliente nuevo</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <crear-cliente></crear-cliente>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn rojoDanger" data-bs-dismiss="modal">Cerrar</button>
+                
+            </div>
+        </div>
+    </div>
 </div>
