--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container">
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
 
@@ -19,7 +19,7 @@
                     <td>{{ porcino.peso }}</td>
                     <td>
                         <i class="bi bi-pencil btn lila margin2"></i>
-                        <i class="bi bi-trash3 btn rojoDanger margin2"></i>
+                        <i class="bi bi-trash3 btn btnVerdeF margin2"></i>
                     </td>
                 </tr>
             }
@@ -27,3 +27,4 @@
         </tbody>
     </table>
 </div>
+<!-- Scrollable modal -->
