--- a/LaGranjaSAFront/LaGranjaFront/src/app/crear-cliente/crear-cliente.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/crear-cliente/crear-cliente.html
@@ -1,6 +1,10 @@
 <br>
 <div class="container">
-
+    <!-- ALERTA -->
+  <div *ngIf="showAlert" class="alert alert-success alert-dismissible fade show" role="alert">
+    {{ mensaje }}
+    <button type="button" class="btn-close" (click)="showAlert = false"></button>
+  </div>
     <div class="input-group mb-3">
         <span class="input-group-text">Cedula</span>
 
