Funcionalidad: eliminar cliente

--- a/LaGranjaSAFront/LaGranjaFront/src/app/crear-cliente/crear-cliente.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/crear-cliente/crear-cliente.html
@@ -6,32 +6,32 @@
     <button type="button" class="btn-close" (click)="showAlert = false"></button>
   </div>
     <div class="input-group mb-3">
-        <span class="input-group-text">Cedula</span>
+        <span class="input-group-text"><i class="bi bi-person-vcard"> </i></span>
 
-        <input type="text" class="form-control" [(ngModel)]="cedula"/>
+        <input type="text" class="form-control" placeholder="Cedula" [(ngModel)]="cedula"/>
     </div>
 
     <div class="input-group mb-3">
-        <span class="input-group-text">Nombres</span>
-        <input type="text" class="form-control"  [(ngModel)]="nombres"/>
+        <span class="input-group-text"><i class="bi bi-person-lines-fill"> </i></span>
+        <input type="text" class="form-control" placeholder="Nombres" [(ngModel)]="nombres"/>
 
     </div>
 
     <div class="input-group mb-3">
-        <span class="input-group-text">Apellidos</span>
+        <span class="input-group-text"><i class="bi bi-person-lines-fill"></i></span>
 
-        <input type="text" class="form-control" [(ngModel)]="apellidos"/>
+        <input type="text" class="form-control" placeholder="Apellidos" [(ngModel)]="apellidos"/>
     </div>
 
     <div class="input-group mb-3">
-        <span class="input-group-text">Direccion</span>
-        <input type="text" class="form-control"[(ngModel)]="direccion"/>
+        <span class="input-group-text"><i class="bi bi-signpost-split-fill"></i></span>
+        <input type="text" class="form-control" placeholder="Direccion" [(ngModel)]="direccion"/>
 
     </div>
     <div class="input-group mb-3">
-        <span class="input-group-text">Telefono</span>
-        <input type="text" class="form-control" [(ngModel)]="telefono"/>
+        <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
+        <input type="text" class="form-control" placeholder="Telefono" [(ngModel)]="telefono"/>
 
     </div>
-    <button class="btn botonPrimario" (click)="onSubmit()">Guardar</button>
+    <button class="btn botonPrimario" (click)="onSubmit()"><i class="bi bi-floppy"></i> Guardar</button>
 </div>
