--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
@@ -1,6 +1,6 @@
 <br>
 <div class="container">
-    <table class="table table-dark">
+    <table class="table ">
         <thead>
             <tr>
 
@@ -18,13 +18,14 @@
                     <td>{{ porcino.edad }}</td>
                     <td>{{ porcino.peso }}</td>
                     <td>
-                        <i class="bi bi-pencil btn lila margin2"></i>
-                        <i class="bi bi-trash3 btn btnVerdeF margin2"></i>
+                        <i class="bi bi-pencil btn colorAzul margin2"></i>
+                        <i class="bi bi-trash3 btn rojoDanger margin2"></i>
                     </td>
                 </tr>
             }
         
         </tbody>
     </table>
+    <button class="btn colorAzul"><i class="bi bi-plus"></i> Nuevo porcino</button>
 </div>
 <!-- Scrollable modal -->
