--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-clientes/listado-clientes.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-clientes/listado-clientes.html
@@ -21,6 +21,7 @@
                 <td>
                     <button class="bi bi-pencil btn colorAzul margin2" (click)="editCliente(item.cedula)"></button>
                     <button class="bi bi-trash3 btn rojoDanger margin2" (click)="deleteCliente(item.cedula)"></button>
+                    <button class="btn btn-primary bi bi-patch-plus margin2" (click)="goToCrearPorcino(item.cedula)"></button>
                 </td>
             </tr>
             }
