--- a/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listado-porcino/listado-porcino.html
@@ -3,18 +3,17 @@
     <table class="table ">
         <thead>
             <tr>
+                <th scope="col">Acciones</th>
                 <th scope="col">Raza</th>
+                <th scope="col">Fecha de nacimiento</th>
                 <th scope="col">Edad</th>
                 <th scope="col">Peso [kg]</th>
-                <th scope="col">Accion</th>
+                <th scope="col">Cliente</th>
             </tr>
         </thead>
         <tbody>
             @for (porcino of porcinos; track $index) {
             <tr>
-                <td>{{ porcino.raza }}</td>
-                <td>{{ porcino.edad }}</td>
-                <td>{{ porcino.peso }}</td>
                 <td>
                     <button class="btn colorAzul margin2" (click)="editPorcino(porcino.id_porcino)">
                         <i class="bi bi-pencil"></i>
@@ -23,11 +22,17 @@
                         <i class="bi bi-trash3"></i>
                     </button>
                 </td>
+                <td>{{ porcino.raza.descripcion }}</td> <!--descripcion de la raza-->
+                <td>{{ porcino.fecha_nacimiento }}</td>
+                <td> {{ porcino.edad }} </td>
+                <td>{{ porcino.peso }}</td>
+                <td> {{ porcino.cliente.nombres }} {{ " " }}{{ porcino.cliente.apellidos }} </td>
             </tr>
             }
 
         </tbody>
     </table>
-    <button class="btn colorAzul" (click)="goToCrearPorcino()"><i class="bi bi-plus"></i> Nuevo porcino</button>
+    <button class="btn colorAzul" (click)="goToCrearPorcino()" disabled><i class="bi bi-plus"></i> Nuevo
+        porcino</button>
 </div>
 <!-- Scrollable modal -->
