CRUD Listo - FRONT END

--- a/LaGranjaSAFront/LaGranjaFront/src/styles.css
+++ b/LaGranjaSAFront/LaGranjaFront/src/styles.css
@@ -44,3 +44,7 @@ body {
 .btnVerdeF {
     background-color: var(--color-verde-fluorecente) !important;
 }
+span{
+    color: var(--color-primario);
+    font-style: italic;
+}
