--- a/LaGranjaSAFront/LaGranjaFront/src/app/nav-bar/nav-bar.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/nav-bar/nav-bar.html
@@ -7,11 +7,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <button class="nav-link active" (click)="goToPorcinos()">Porcinos</button>
+          <button class="nav-link" (click)="goToPorcinos()">Porcinos</button>
         </li>
 
         <li class="nav-item">
           <button class="nav-link" (click)="goToClientes()">Clientes</button>
+        </li>
+        <li class="nav-item">
+          <button class="nav-link" (click)="goToAlimentacion()">Alimentación</button>
         </li>
         
       </ul>
