Add more maria changes

--- a/LaGranjaSAFront/LaGranjaFront/src/app/listar-alimentacion/listar-alimentacion.html
+++ b/LaGranjaSAFront/LaGranjaFront/src/app/listar-alimentacion/listar-alimentacion.html
@@ -5,7 +5,7 @@
 
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card h-100 shadow-sm">
-            <img src="../assets/CERDO.svg" class="card-img-top" alt="cerdo">
+            <!--<img src="../assets/CERDO.svg" class="card-img-top" alt="cerdo">-->
             <div class="card-body">
               <h5 class="card-title">Alimentación según etapa</h5>
               <p class="card-text">Para el porcino: <span>{{item.raza.descripcion}}</span> en la etapa de <span>{{ item.etapa }}</span>
